--- a/style0001.css
+++ b/style0001.css
@@ -17,9 +17,9 @@ body {
 	background-color: #222;
 }
 
-.rotateimg180{
+/*.rotateimg180{
 	transform: rotate(180deg);
-}
+}*/
 
 .main-nav{
 	width: 100%;
@@ -158,7 +158,7 @@ nav img {
 	width: 100%;
 	overflow: hidden;
 	margin: 0px auto;
-	padding-top: 15px;
+	padding-top: 11.7px;
 	/*padding-bottom: 15px;*/
 	background: none;
 }
@@ -175,12 +175,13 @@ nav img {
 	transition: all 0.5s ease;
 	border-radius: 20px;
 	margin-left: 10px;
+	box-shadow: 8px 8px 10px black;
 }
 
 .movingimages img:hover {
 	transform: scale(1.1);
 	cursor: pointer;
-	box-shadow: 0px 3px 5px rgba(0,0,0,0.2)
+	box-shadow: 3px 3px 4px rgba(0,0,0,0.2)
 }
 
 .first{
