--- a/style0001.css
+++ b/style0001.css
@@ -17,9 +17,9 @@ body {
 	background-color: #222;
 }
 
-.rotateimg180{
+/*.rotateimg180{
 	transform: rotate(180deg);
-}
+}*/
 
 .main-nav{
 	width: 100%;
